tests/suite/projects/fail/generated/missing_import_10/main.ny
//~ ERROR import not found
import "lib/missing10.ny"

fn main() {
    print(0)
}
